security/kyverno/block-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-privileged

spec:
  validationFailureAction: enforce

  rules:
    - name: prevent-privileged

      match:
        resources:
          kinds:
            - Pod

      validate:
        message: "Privileged containers are not allowed"

        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false
