security/kyverno/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels

spec:
  validationFailureAction: enforce

  rules:
    - name: check-required-labels
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "app and environment labels are required"
        pattern:
          metadata:
            labels:
              app: "?*"
              environment: "?*"
