security/kyverno/require-resource-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits

spec:
  validationFailureAction: enforce

  rules:
    - name: validate-resources

      match:
        resources:
          kinds:
            - Pod

      validate:
        message: "CPU and memory limits are required"

        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    memory: "?*"
                    cpu: "?*"
