security/kyverno/restrict-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-latest-tag

spec:
  validationFailureAction: enforce

  rules:
    - name: validate-image-tag

      match:
        resources:
          kinds:
            - Pod

      validate:
        message: "latest tag is not allowed"

        pattern:
          spec:
            containers:
              - image: "!*:latest"
